<?xml version="1.0"?>
<package format="3">
  <name>hello_world_pkg</name>
  <version>0.0.0</version>
  <description>
    A simple ROS 2 C++ node that prints "Hello, World!" every second.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>

  <!-- Test dependencies (optional but standard) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
